--- a/app.css
+++ b/app.css
@@ -27,7 +27,7 @@ justify-content: center;
 }
 
 .destination {
-background: #03a9f4;
+background:  05لb9f4;
 box-shadow: 0 1px 9px 0 rgba(0, 0, 0, 0.4);
 color: white;
 margin: 0.5em;
@@ -48,7 +48,7 @@ transform: rotate(-45deg);
 text-shadow: 0 0 5px #01579b;
 }
 
-#florida {
+#london {
 background-color: #03a9f4;
 }
 
